--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="top">
     <h1>🔐 Cifras Clássicas</h1>
-    <button id="goto-aes" class="nav-btn">Ir para AES →</button>
+    <button id="goto-aes" class="nav-btn">Ir para AES</button>
   </header>
 
   <main class="grid">
